clusters/home-k3s/apps/kubernetes-dashboard/dashboard.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
